<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="nano_text">My NanoDegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_name">Spotify Streamer</string>
    <string name="scores_name">Scores App</string>
    <string name="library_name">Library App</string>
    <string name="buildit_name">Build it Bigger</string>
    <string name="xyz_name">XYZ Reader</string>
    <string name="capstone_name">Capstone: My Own App</string>
</resources>
