<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
    android:background="@color/orange">

    <TextView
        android:text="@string/nano_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="18dp"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal|top" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/spotify_name"
        android:id="@+id/spotify_button"
        android:layout_gravity="left|center_vertical"
        android:background="@color/holo_purple"
        android:onClick="launchApp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/scores_name"
        android:id="@+id/scores_button"
        android:layout_gravity="center|center_vertical"
        android:background="@color/holo_purple"
        android:onClick="launchApp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/library_name"
        android:id="@+id/library_button"
        android:layout_gravity="right|center_vertical"
        android:background="@color/holo_purple"
        android:onClick="launchApp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/buildit_name"
        android:id="@+id/buildit_button"
        android:layout_gravity="left|bottom"
        android:background="@color/holo_purple"
        android:onClick="launchApp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/xyz_name"
        android:id="@+id/xyz_button"
        android:layout_gravity="right|bottom"
        android:background="@color/holo_purple"
        android:onClick="launchApp"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:text="@string/capstone_name"
        android:id="@+id/capstone_button"
        android:layout_gravity="center|bottom"
        android:background="@color/holo_purple"
        android:onClick="launchApp"/>

</FrameLayout>
